# uip-toolchain

./: .gitattributes  .gitignore  ARCHITECTURE.md  AUDIT_2026-05-28.md  README.md  ROADMAP.md  eval_logs.json  evaluate_logs.json  instalar-ccs-uip.cmd  models.conf.example  projects.yaml  pyproject.toml  rules.yaml
.docs/: HANDOFF_STUDIO_ORACLE.md  STUDIO_API_NOTES.md
.local/: review-coletar-emails-final.json  review-coletar-emails-final2.json  review-coletar-emails.json
assets/: canonical_pins.yaml  dotnet6_symbol_catalog.yaml  version_exclusive_apis.yaml
docs/: N5_FIXER_PLAN.md  rules-apply-contextual-report.md  toolchain-architecture-dimensions-review.md  uip-toolchain-rules-catalog.xlsx  uipath-cli-migration.md
evals/: eval_logmessages.json
hooks/: post_project_json_edit.py  post_xaml_edit.py  pre_xaml_read.py
migrator/: MigratorHeadless.csproj  Program.cs
migrator_headless/: Program.cs
runtime_loadtest/: Program.cs  extract_ccs.ps1  nuget.config
scripts/: config_xlsx_manager.py  inspect-ui-tree.ps1  resolve_nuget.py  snapshot_regression.py  xaml_example.py  xaml_find.py  xaml_summary.py
spike/: probe_di_access.py  probe_migration_invokers.py  probe_studio_api.py  studio_import_refs_spike.py  try_direct_construct.py
tests/: conftest.py  test_a13_n10_scope.py  test_activity_compiler.py  test_activity_migrator_location.py  test_agent_skills.py  test_api.py  test_architecture_contract.py  test_audit_activity_meta.py  test_audit_ccs_contract.py  test_audit_fixers.py  test_audit_logs.py  test_audit_migrator_regress.py  test_audit_naming.py  test_audit_naming_prefix.py  test_audit_pin_alert.py  test_audit_selector_audit.py  test_audit_testing.py  test_audit_transaction_item.py  test_audit_windows.py  test_audit_yaml.py  test_canonical.py  test_ccs_contract_securestring_guard.py  test_ccs_contract_thread_safety.py  test_cli.py  test_cli_all.py  test_cli_fix.py  test_cli_fix_analyzer_gate_retry.py  (+84 more)
(+254 files in other folders)
