[project]
name = "rule-engine"
version = "0.1.0"
description = "UiPath rules engine — single source of truth"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "pathspec>=0.12",
    "openpyxl>=3.1",
    "lxml>=5.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
rule-engine = "rule_engine.cli:main"
uip = "rule_engine.cli:uip_main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["rule_engine*"]
