[project]
name = "uip-toolchain"
version = "0.1.0"
description = "UiPath dev toolchain — lint, fix, migrate, gate, pack"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "pathspec>=0.12",
    "openpyxl>=3.1",
    "lxml>=5.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
ccs-uip = "uip_engine.cli:ccs_uip_main"
ccs-uip-publish-dev = "uip_engine.publish_dev:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["uip_engine*"]

[tool.setuptools.package-data]
uip_engine = ["ccs_agent_skills/*/SKILL.md"]
